left: add 3 right moves, add win possibility

--- a/static/style.css
+++ b/static/style.css
@@ -73,3 +73,11 @@ h1{
 .buttons{
     color: black;
 }
+#tick{
+    filter: grayscale(100%);
+    position: fixed;
+    bottom: 15%;
+    left: 15%;
+    color: black;
+    width: 10%;
+}
